--- a/lib/src/dashboard_component/post_account_component/post_account_component.html
+++ b/lib/src/dashboard_component/post_account_component/post_account_component.html
@@ -4,7 +4,7 @@
             <div class="card border-0 bg-transparent box-one c-bordered br-20 shadow-c">
                 <div class="card-header bg-transparent border-0 box-one mt-0 n-mt-1 br-20">
                     <span class="float-left ml-3">Facebook</span>
-                    <span class="float-right mr-3 fab fa-facebook text-primary mt-1"></span>
+                    <span class="float-right mr-3 fa fa-facebook text-primary mt-1"></span>
                 </div>
                 <div class="card-body m-2">
                     <div class="text-center">
@@ -29,7 +29,7 @@
             <div class="card border-0 bg-transparent box-one c-bordered br-20 shadow-c">
                 <div class="card-header bg-transparent border-0 box-one n-mt-1 mt-0 br-20">
                     <span class="float-left ml-3">Twitter</span>
-                    <span class="float-right mr-3 fab fa-twitter text-primary mt-1"></span>
+                    <span class="float-right mr-3 fa fa-twitter text-primary mt-1"></span>
                 </div>
                 <div class="card-body m-2">
                     <div class="text-center">
@@ -54,7 +54,7 @@
             <div class="card border-0 bg-transparent box-one c-bordered br-20 shadow-c">
                 <div class="card-header bg-transparent border-0 box-one n-mt-1 mt-0 br-20">
                     <span class="float-left ml-3">Instagram</span>
-                    <span class="float-right mr-3 fab fa-instagram text-danger mt-1"></span>
+                    <span class="float-right mr-3 fa fa-instagram text-danger mt-1"></span>
                 </div>
                 <div class="card-body m-2">
                     <div class="text-center">
@@ -79,7 +79,7 @@
             <div class="card border-0 bg-transparent box-one c-bordered br-20 shadow-c">
                 <div class="card-header bg-transparent border-0 box-one n-mt-1 mt-0 br-20">
                     <span class="float-left ml-3">LinkedIn</span>
-                    <span class="float-right mr-3 fab fa-linkedin-in text-dark mt-1"></span>
+                    <span class="float-right mr-3 fa fa-linkedin-in text-dark mt-1"></span>
                 </div>
                 <div class="card-body m-2">
                     <div class="text-center">
@@ -106,7 +106,7 @@
     <div class="card-header bg-transparent border-0 text-center" id="media-icon">
         <div class="nt-circle">
             <img src="img/{{mediaIcon}}_icon.png" alt="{{mediaIcon}}-icon" width="100px" height="100px" class="nt-center img-fluid">
-<!--            <span class="nt-center fab fa-{{ mediaIcon }} {{ mediaText }} fa-6x"></span>-->
+<!--            <span class="nt-center fa fa-{{ mediaIcon }} {{ mediaText }} fa-6x"></span>-->
         </div>
     </div>
 
