--- a/lib/src/dashboard_component/dash_home_component/dash_home_component.html
+++ b/lib/src/dashboard_component/dash_home_component/dash_home_component.html
@@ -1,61 +1,73 @@
 <div class="container">
     <div class="col-md-12">
         <div class="row">
-            <div class="col-md-6 col-sm-12">
-                <div class="col-12 mt-3">
+            <div class="col-md-9 col-sm-6">
+                <div class="col-12 my-3">
                     <span>Post Statistics</span>
                     <span class="ml-2 text-muted" style="font-size: small">{{date | date}}</span>
                     <span class="ml-2 fa fa-chart-pie cursor-pointer text-dark"></span>
                 </div>
                 <div class="row">
-                    <div class="col-md-6 col-sm-12">
-                        <div class="card box-one border-0 my-3 br-20">
-                            <div class="card-body text-center text-muted">
-                                <div class="nt-circle btn btn-primary mb-2 mx-auto">
-                                    <span class="fa fa-envelope"></span>
+                    <div class="col-md-4 col-sm-6 mb-3 mb-md-0">
+                        <div class="card bg-gradient-danger text-white shadow--hover border-0 br-20 m-0 p-0">
+                            <div class="card-body p-3 text-center">
+                                <span class="fa fa-envelope fa-2x"></span>
+                                <div class="pt-2">
+                                    <span class="small text-white">Created Posts</span>
                                 </div>
-                                <br>
-                                {{posts.length}} {{postCreated}} Created
+                                <div>
+                                    <span class="text-white font-weight-bolder h5">100</span>
+                                </div>
+                                <span class="small text-white">+23</span>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6 col-sm-12">
-                        <div class="card box-one border-0 my-3 br-20">
-                            <div class="card-body text-center text-muted">
-                                <div class="nt-circle btn btn-success mb-2 mx-auto">
-                                    <span class="fa fa-paper-plane"></span>
+                    <div class="col-md-4 col-sm-6 mb-3 mb-md-0">
+                        <div class="card bg-gradient-primary text-white shadow--hover border-0 br-20 m-0 p-0">
+                            <div class="card-body p-3 text-center">
+                                <span class="fa fa-paper-plane fa-2x"></span>
+                                <div class="pt-2">
+                                    <span class="small text-white">Scheduled Posts</span>
                                 </div>
-                                <br>
-                                {{scheduledPosts.length}} Scheduled {{postScheduled}}
+                                <div>
+                                    <span class="text-white font-weight-bolder h5">100</span>
+                                </div>
+                                <span class="small text-white">+23</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6 mb-3 mb-md-0">
+                        <div class="card bg-gradient-default text-white shadow--hover border-0 br-20 m-0 p-0">
+                            <div class="card-body p-3 text-center">
+                                <span class="fa fa-users fa-2x"></span>
+                                <div class="pt-2">
+                                    <span class="small text-white">Accounts</span>
+                                </div>
+                                <div>
+                                    <span class="text-white font-weight-bolder h5">100</span>
+                                </div>
+                                <span class="small text-white">+23</span>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 col-sm-12">
-                <div class="col-12 mt-3">
-                    <span>Post engagement</span>
+            <div class="col-md-3 col-sm-6">
+                <div class="col-12 my-3">
+                    <span>Engagements</span>
                 </div>
                 <div class="row">
-                    <div class="col-md-6 col-sm-12">
-                        <div class="card box-one border-0 my-3 br-20">
-                            <div class="card-body text-center text-muted">
-                                <div class="nt-circle btn btn-white mb-2 mx-auto">
-                                    <span class="fa fa-eye"></span>
+                    <div class="col-md-12">
+                        <div class="card bg-gradient-green text-white shadow--hover border-0 br-20 m-0 p-0">
+                            <div class="card-body p-3 text-center">
+                                <span class="fa fa-comment fa-2x"></span>
+                                <div class="pt-2">
+                                    <span class="small text-white">Engagements</span>
                                 </div>
-                                <br>
-                                0 Viewers
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-sm-12">
-                        <div class="card box-one border-0 my-3 br-20">
-                            <div class="card-body text-center text-muted">
-                                <div class="nt-circle btn btn-dark mb-2 mx-auto">
-                                    <span class="fa fa-comments"></span>
+                                <div>
+                                    <span class="text-white font-weight-bolder h5">100</span>
                                 </div>
-                                <br>
-                                0 Engaged
+                                <span class="small text-white">+23</span>
                             </div>
                         </div>
                     </div>
