--- a/lib/src/dashboard_component/view_post_component/view_post_component.html
+++ b/lib/src/dashboard_component/view_post_component/view_post_component.html
@@ -40,7 +40,7 @@
                                 <div class="col-3 my-auto">
                                     <button type="button" class="btn btn-sm br-20 shadow-c"
                                             (click)="autoSync()">
-                                        <span class="fa fa-sync" *ngIf="!isRefresh"></span>
+                                        <span class="fa fa-refresh" *ngIf="!isRefresh"></span>
                                         <div *ngIf="isRefresh">
                                             <img src="img/mini-loader.gif" style="width: 20px; height: auto">
                                         </div>
@@ -83,7 +83,7 @@
                     <div class="col-auto mx-auto my-auto">
                         <button type="button" class="btn btn-sm br-20 shadow-c"
                                 (click)="autoSync()">
-                            <span class="fa fa-sync" *ngIf="!isRefresh"></span>
+                            <span class="fa fa-refresh" *ngIf="!isRefresh"></span>
                             <div *ngIf="isRefresh">
                                 <img src="img/mini-loader.gif" style="width: 20px; height: auto">
                             </div>
