Dash home update

--- a/lib/src/dashboard_component/dashboard_component.html
+++ b/lib/src/dashboard_component/dashboard_component.html
@@ -57,7 +57,7 @@
                                 </div>
                             </li>
                             <div class="dropdown-divider"></div>
-                            <li class="pr-1">
+                            <li class="pr-1 cursor-pointer" (click)="showDialog()">
                                 <div class="row mx-0">
                                     <div class="col-4 pr-0">
                                         <div class="icon-circle bg-gradient-danger">
@@ -65,7 +65,7 @@
                                         </div>
                                     </div>
                                     <div class="col-8 px-0">
-                                        <a href="#" class="nav-link text-muted my-auto small">Logout</a>
+                                        <a class="nav-link text-muted my-auto small">Logout</a>
                                     </div>
                                 </div>
                             </li>
