--- a/lib/src/dashboard_component/dashboard_component.html
+++ b/lib/src/dashboard_component/dashboard_component.html
@@ -88,6 +88,9 @@
                 <material-list-item [routerLink]="InnerRoutePaths.manage_post.toUrl()" [routerLinkActive]="'active_side'">
                     <material-icon icon="timer"></material-icon>Manage Post
                 </material-list-item>
+                <material-list-item [routerLink]="InnerRoutePaths.post_engagement.toUrl()" [routerLinkActive]="'active_side'">
+                    <material-icon icon="chat"></material-icon>Engagement
+                </material-list-item>
                 <div label class="my-2 text-dark">Accounts</div>
                 <material-list-item [routerLink]="InnerRoutePaths.post_account.toUrl()" [routerLinkActive]="'active_side'">
                     <material-icon icon="person"></material-icon>Post Accounts
