--- a/lib/src/dashboard_component/dash_home_component/dash_home_component.html
+++ b/lib/src/dashboard_component/dash_home_component/dash_home_component.html
@@ -141,21 +141,50 @@
                                 </ul>
                             </div>
                             <div class="card shadow post-data-card">
-                                <div class="card-body">
+                                <div class="card-body m-0 p-0">
                                     <div class="tab-content" id="myTabContent">
                                         <div class="tab-pane fade show active" id="tabs-icons-text-1" role="tabpanel" aria-labelledby="tabs-icons-text-1-tab">
-                                            <div class="nt-center">
-                                                Table tab
+                                            <div class="row m-0">
+                                                <div class="col-md-12 m-0 p-0">
+                                                    <div class="container p-0">
+                                                        <table class="table post-card-data small table-responsive" style="display: table !important;">
+                                                            <thead>
+                                                            <tr>
+                                                                <th scope="col"></th>
+                                                                <th scope="col">
+                                                                    <span class="fa fa-envelope mr-1"></span>
+                                                                    Message
+                                                                </th>
+                                                                <th scope="col">
+                                                                    <span class="fa fa-hashtag mr-1"></span>
+                                                                    Tags
+                                                                </th>
+                                                            </tr>
+                                                            </thead>
+                                                            <tbody>
+                                                            <tr *ngFor="let sentPost of sentPosts">
+                                                                <td>
+                                                                    <div class="image-thumbnail">
+                                                                        <img src="img/dropdown-1.png" alt="dropdown-1" class="img-fluid thumbnail">
+                                                                    </div>
+                                                                </td>
+                                                                <td>{{sentPost.postMessage}}</td>
+                                                                <td><span *ngFor="let tag of sentPost.postTag">{{tag}},</span></td>
+                                                            </tr>
+                                                            </tbody>
+                                                        </table>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="tab-pane fade" id="tabs-icons-text-2" role="tabpanel" aria-labelledby="tabs-icons-text-2-tab">
                                             <div class="nt-center">
-                                                Pie Chart tab
+
                                             </div>
                                         </div>
                                         <div class="tab-pane fade" id="tabs-icons-text-3" role="tabpanel" aria-labelledby="tabs-icons-text-3-tab">
                                             <div class="nt-center">
-                                                Line Chart tab
+
                                             </div>
                                         </div>
                                     </div>
