--- a/lib/src/dashboard_component/create_post_component/create_post_component.html
+++ b/lib/src/dashboard_component/create_post_component/create_post_component.html
@@ -103,7 +103,7 @@
                                 <!-- Panel 1 -->
                                 <div class="tab-pane fade in show active position-relative" id="panel1" role="tabpanel" style="overflow-y: scroll !important;">
                                     <!--<div class="text-muted cursor-pointer text-center br-20 small" *ngIf="imgPaths.isEmpty">Click to + to add image</div>-->
-                                    <div class="row m-0 w-100">
+                                    <!--<div class="row m-0 w-100">
                                         <div class="col-auto mx-auto py-2" *ngFor="let imgPath of imgPaths; let $i = index">
                                             <a target="_blank" href="{{imgPath}}" class="post-image img-center">
                                                 <div class="row mx-0 w-100 my-2" *ngIf="imagesProgress[$i] != 100">
@@ -113,6 +113,20 @@
                                                 </div>
                                                 <img src="{{imgPath}}" alt="{{imgPath}}" width="120" class="img-fluid img-center br-20" [class.blur]="imagesProgress[$i] != 100">
                                             </a>
+                                        </div>
+                                    </div>-->
+                                    <div class="m-0 p-2">
+                                        <div class="card-columns">
+                                            <div class="card p-2" *ngFor="let imgPath of imgPaths; let $i = index" style="border-radius: 10px">
+                                                <a target="_blank" href="{{imgPath}}" class="post-image img-center">
+                                                    <div class="row mx-0 w-100 my-2" *ngIf="imagesProgress[$i] != 100">
+                                                        <div class="col-sm-12 mx-auto">
+                                                            <div class="progress-div" style="width: {{imagesProgress[$i]}}%;"></div>
+                                                        </div>
+                                                    </div>
+                                                    <img src="{{imgPath}}" alt="{{imgPath}}" width="100" class="img-fluid img-center" [class.blur]="imagesProgress[$i] != 100">
+                                                </a>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="nt-center">
