--- a/lib/src/dashboard_component/view_post_component/view_post_component.html
+++ b/lib/src/dashboard_component/view_post_component/view_post_component.html
@@ -1,11 +1,11 @@
-<div class="col-4 py-2 mt-2 w-auto br-20 text-center"
+<div *ngIf="postAlertBool"
+     [class.alert-danger]="postAlertCode!=200"
      [class.alert-success]="postAlertCode==200"
-     [class.alert-danger]="postAlertCode==500"
-     *ngIf="postAlertBool" id="post_alert">
+     class="py-2 mt-2 w-auto text-center" id="post_alert">
     <span class="fa fa-bell mx-3"></span>
     {{postAlert}}
-    <span class="fa fa-times fa-sm mx-3 cursor-pointer"
-          id="alert_close" (click)="dismissAlert()"></span>
+    <span (click)="dismissAlert()"
+          class="fa fa-times fa-sm mx-3 my-auto cursor-pointer" id="alert_close"></span>
 </div>
 
 <div class="container mt-3">
