Chat UI implementation

--- a/lib/src/dashboard_component/create_post_component/create_post_component.html
+++ b/lib/src/dashboard_component/create_post_component/create_post_component.html
@@ -137,8 +137,8 @@
                                                     </div>
                                                 </div>
                                                 <a target="_blank" href="{{imgPath}}" class="post-image img-center">
-                                                    <div class="row mx-0 w-100 my-2" *ngIf="imagesProgress[$i] != 100">
-                                                        <div class="col-sm-12 mx-auto">
+                                                    <div class="row mx-0 w-100 my-1" *ngIf="imagesProgress[$i] != 100">
+                                                        <div class="col-sm-12 m-0 p-0">
                                                             <div class="progress-div" style="width: {{imagesProgress[$i]}}%;"></div>
                                                         </div>
                                                     </div>
